--- a/templates/practice.html
+++ b/templates/practice.html
@@ -23,7 +23,10 @@
 
 <script>
     var qIndex = 0;
+    // get question data from python
     var questions = JSON.parse('{{data | tojson}}');
+
+    // shuffle questions
     function shuffleArray(array) {
         for (var i = array.length - 1; i > 0; i--) {
             var j = Math.floor(Math.random() * (i + 1));
@@ -32,25 +35,30 @@
             array[j] = temp;
         }
     }
+    // show question
     function showFront() {
         document.getElementById("answer").innerText = "";
         document.getElementById("question").innerText = questions[qIndex]["question"];
     }
+    // show answer
     function showBack() {
         document.getElementById("answer").innerText = questions[qIndex]["answer"];
     }
+    // show next question
     function next() {
         if(qIndex < questions.length - 1) {
             qIndex++;
         }
         showFront();
     }
+    // show previous question
     function prev() {
         if(qIndex > 0) {
             qIndex--;
         }
         showFront();
     }
+    // initialize
     shuffleArray(questions);
     showFront();
 </script>
