--- a/templates/editor.html
+++ b/templates/editor.html
@@ -39,7 +39,6 @@
                     }
                 }
                 document.getElementById(`q-${qNumber}`).value = splitQuestion.join("\n");
-                console.log(questionText);
             }
         });
         page.appendChild(questionElem);
@@ -49,7 +48,7 @@
     function generateButtons() {
         var buttons = document.createElement("div");
         buttons.setAttribute("id", "buttons")
-        buttons.innerHTML += "<br><button id='save' type='submit' class='btn btn-primary ml-0'>save</button>";
+        buttons.innerHTML += "<br><button id='save' type='submit' class='btn btn-primary ml-0'>save</button>&nbsp;&nbsp;";
         buttons.innerHTML += "<button id='add' onclick='addQuestion()' class='btn btn-primary ml-0'>add new question</button>";
         page.appendChild(buttons)
     }
