--- a/templates/editor.html
+++ b/templates/editor.html
@@ -12,6 +12,7 @@
     // generate question from question data
     function generateQuestion(qNumber, type, question, answer) {
         var questionElem = document.createElement("div");
+        questionElem.setAttribute("id", `question${qNumber}`);
         typeTest = type == "test" ? "selected" : "";
         typeFlashcard = type == "flashcard" ? "selected" : "";
         questionElem.innerHTML += `<h3>Question ${qNumber+1}:</h3>`;
@@ -22,7 +23,7 @@
         questionElem.innerHTML += "<p>answer: ";
         questionElem.innerHTML += `<textarea class="form-control" rows='5' style='width: 100%;' name='a-${qNumber}' id='a-${qNumber}'>${answer}</textarea>`;
         questionElem.innerHTML += "</p>";
-        questionElem.innerHTML += `<button onclick='removeQuestion(${qNumber})' class='btn btn-danger ml-0'>remove</button>`
+        questionElem.innerHTML += `<a onclick='removeQuestion(${qNumber})' class='btn btn-danger ml-0'>remove</a>`
         questionElem.innerHTML += "<br><br>";
         questionElem.addEventListener("keyup", event => {
             questionText = document.getElementById(`q-${qNumber}`).value;
