--- a/templates/practice.html
+++ b/templates/practice.html
@@ -58,7 +58,7 @@
             answerText.innerText = "";
             questionBody.innerText = "";
             for (var i = 0; i < choices.length; i++) {
-                choiceHTML += "<input type='checkbox' name='choice' id='" + choices[i].replace("☑ ", "") + "'>&nbsp;&nbsp;" + choices[i].replace("☑ ", "") + "<br>";
+                choiceHTML += "<input type='checkbox' class='form-check-input' name='choice' id='" + choices[i].replace("☑ ", "") + "'>&nbsp;&nbsp;" + choices[i].replace("☑ ", "") + "<br>";
             }
             testChoices.innerHTML = choiceHTML;
         }
