--- a/static/styles.css
+++ b/static/styles.css
@@ -19,3 +19,11 @@
     justify-content: center;
     align-items: center;
 }
+
+.smooth {
+    transition: all 0.5s ease;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+}
